2007-01-04 Alasdair Allan <aa@astro.ex.ac.uk> 

	* t/4_stc.t: Fixed prefix in comparison test file.
	
2006-06-20 Alasdair Allan <aa@astro.ex.ac.uk> 

        * VOEvent.pm: Bug fix to what() so it return undef if there isn't a
          <What> tag rather than returning an error.

2006-06-19 Alasdair Allan <aa@astro.ex.ac.uk> 

	* VOEvent.pm: Modified <How> support to validate against the 1.1 draft.
	
	* t/2_how.t: Tests for above modifications.

2006-06-07 Alasdair Allan <aa@astro.ex.ac.uk> 

	* VOEvent.pm: Reduced minimum hash for an event message down to
	  Role and ID, removed requirement for WhereWhen or Ref. Put an
	  if() blovk around WhereWhen so it doesn't get automagically
	  created.

2006-05-22  Alasdair Allan <aa@astro.ex.ac.uk> (VOEvent-v1.1-060519.xsd)

	* VOEvent.pm: Fixed problem with STC block, documents built with the
	  module now fully validate against the v1.1-060519 schema.
	  
2006-05-19  Alasdair Allan <aa@astro.ex.ac.uk>

	* VOEvent.pm: Fixed <Who> block, doesn't seem as flexible as the
	  tags we initially inherited from RTML. Tried to preserve the
	  old API, but added a new API for v1.1 as well. Both are supported
	  to build messages, but both emit the new tags. Also fixed the
	  <Citation> block from <EventID> to <EventIVORN>. Also moved to
	  unqualifed namespace for XPath queries.
	  
2006-05-16  Alasdair Allan <aa@astro.ex.ac.uk>

       * VOEvent.pm: Modified the <WhereWhen> parsing and generation to
         use the new "default" V1.1 standard way of doing things. Also
	 added parsing for several different STC co-ordinate representations
	 that have been seen in the wild so far with the prototypes.
	 
       * VOEvent.pm: More STC fixes for <ObservatoryLocation> and the
         <AstroCoordSystem> tag support.	 
	 
2006-04-30  Alasdair Allan <aa@astro.ex.ac.uk>

       * VOEvent.pm: Modified to handle <VOEvent ivorn=""> and to have
         some backwards support for <VOEvent id="">. 

2006-03-21  Alasdair Allan <aa@astro.ex.ac.uk>