@@ -42,13 +42,15 @@ use File::Spec;
 use Carp;
 use Data::Dumper;
 
-'$Revision: 1.29 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+our ($references);
+
+'$Revision: 1.30 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 # C O N S T R U C T O R ----------------------------------------------------
 
 =head1 REVISION
 
-$Id: VOEvent.pm,v 1.29 2006/11/17 16:54:40 voevent Exp $
+$Id: VOEvent.pm,v 1.30 2007/07/09 17:26:58 voevent Exp $
 
 =head1 METHODS
 
@@ -1092,6 +1094,11 @@ sub time {
 }
 
 
+sub timeinstant {
+   my $self = shift;
+   $self->time( @_ );
+}   
+
 =item B{what}
 
 Return the <Param> and <Group>'s of <Param>s in the <What> tag,
@@ -1109,6 +1116,342 @@ sub what {
      return undef;
   }
 }
+
+# Methods added by Elizabeth Auden
+
+=item B<starttime>
+
+Try to get start time from solarevents
+
+=cut
+
+sub starttime {
+  my $self = shift;
+  my $starttime;  
+  if ( defined $self->{DOCUMENT}->{WhereWhen}->{type} &&
+       $self->{DOCUMENT}->{WhereWhen}->{type} eq "simple" ) {
+       
+    $starttime = $self->{DOCUMENT}->{WhereWhen}->{Time}->{Value};
+    
+  } else { 
+    # old style eSTAR default
+    $starttime = $self->{DOCUMENT}->{WhereWhen}->{"stc:ObservationLocation"}->
+      {"crd:AstroCoords"}->{"crd:Time"}->{"crd:TimeInstant"}->{"crd:ISOTime"};
+    
+    # SOLAR LASCO, BATSE, NOAA default  
+    unless ( defined $starttime ) {
+        
+       $starttime = $self->{DOCUMENT}->{WhereWhen}->{"stc:ObsDataLocation"}
+                    ->{"stc:ObservationLocation"}->{"stc:AstroCoordArea"}
+		    ->{"stc:TimeInterval"}->{"stc:StartTime"}->{"stc:ISOTime"};
+    }
+  }
+  # There isn't a (valid?) <WhereWhen> see if there is a timestamp in
+  # the <Who> tag as this might also carry a publication datestamp.
+  unless ( defined $starttime ) {
+    $starttime = $self->{DOCUMENT}->{Who}->{Date};
+  }
+  
+  return $starttime;
+}
+
+=item B{stoptime}
+
+ Try to get stop time from solarevents
+
+=cut
+
+sub stoptime {
+  my $self = shift;
+  
+  my $stoptime;  
+  if ( defined $self->{DOCUMENT}->{WhereWhen}->{type} &&
+       $self->{DOCUMENT}->{WhereWhen}->{type} eq "simple" ) {
+       
+    $stoptime = $self->{DOCUMENT}->{WhereWhen}->{Time}->{Value};
+    
+  } else { 
+  
+    # old style eSTAR default
+    $stoptime = $self->{DOCUMENT}->{WhereWhen}->{"stc:ObservationLocation"}->
+      {"crd:AstroCoords"}->{"crd:Time"}->{"crd:TimeInstant"}->{"crd:ISOTime"};
+    
+    # SOLAR LASCO, BATSE, NOAA default  
+    unless ( defined $stoptime ) {
+        
+       $stoptime = $self->{DOCUMENT}->{WhereWhen}->{"stc:ObsDataLocation"}
+                    ->{"stc:ObservationLocation"}->{"stc:AstroCoordArea"}
+		    ->{"stc:TimeInterval"}->{"stc:StartTime"}->{"stc:ISOTime"};
+	      
+    }		        
+  }  
+  
+  # There isn't a (valid?) <WhereWhen> see if there is a timestamp in
+  # the <Who> tag as this might also carry a publication datestamp.
+  unless ( defined $stoptime ) {
+    $stoptime = $self->{DOCUMENT}->{Who}->{Date};
+  }
+  
+  return $stoptime;
+}
+
+
+=item B{concept}
+
+ Try to get concept from events
+
+=cut
+
+sub concept {
+  my $self = shift;
+  my $concept;  
+  $concept = $self->{DOCUMENT}->{Why}->{Inference}->{Concept};
+  if ($concept eq "") {
+    $concept = $self->{DOCUMENT}->{Why}->{Concept};
+  }
+  return $concept;
+}
+
+=item B{name}
+
+ Try to get event name from events
+
+=cut
+
+sub name {
+  my $self = shift;
+  my $name;  
+  $name = $self->{DOCUMENT}->{Why}->{Inference}->{Name};
+  if ($name eq "") {
+    $name = $self->{DOCUMENT}->{Why}->{Name};
+  }
+  return $name;
+}
+
+=item B{contactname}
+
+ Try to get contact name from events
+
+=cut
+
+sub contactname {
+  my $self = shift;
+  my $contactname;  
+  $contactname = $self->{DOCUMENT}->{Who}->{Author}->{contactName};
+  return $contactname;
+}
+
+=item B{contactname}
+
+ Try to get contact name from events
+
+=cut
+
+sub contactemail {
+  my $self = shift;
+  my $contactemail;  
+  $contactemail = $self->{DOCUMENT}->{Who}->{Author}->{contactEmail};
+  return $contactemail;
+}
+
+=item B{references}
+
+Return the <Reference>'s name and uri from the <What> tag,
+
+  $object = new Astro::VO::VOEvent( XML => $scalar );
+  $references = $object->references();
+
+=cut
+
+sub references {
+  my $self = shift;
+  my $refs = "";
+  my $ref = "";
+  my $refname = "";
+  my $refuri = "";
+  if ( $self->{DOCUMENT}->{What}->{Reference}->{'uri'} ne "") {
+    $refname = $self->{DOCUMENT}->{What}->{Reference}->{'name'};
+    $refuri = $self->{DOCUMENT}->{What}->{Reference}->{'uri'};
+  }
+  else {
+
+    while ( my ($key, $value) = each ( %{$self->{DOCUMENT}->{What}->{Reference}})) {
+      if ( ref($value) eq "HASH") {
+        $refname = $key;
+        $refuri = $value->{'uri'};
+      }
+      else {
+        if ($key eq "name") {
+          $refname = $value;
+        } 
+        if ($key eq "uri") {
+          $refuri = $value;
+        }
+      }
+    }  
+
+  } 
+
+  if ($refuri ne "") {
+    if ($refname ne "") {
+      $ref = $refname . "=" . $refuri;
+    }
+    else {
+     $ref = "ref" . "=" . $refuri;
+    }
+    $refs = $refs . $ref . ", "; 
+  }
+
+  $refs = $refs . $references;
+  $references = "";
+  return $refs;
+}
+
+=item B{params}
+
+Return the <Group><Param></Group>'s name, value and unit from the <What> tag,
+
+  $object = new Astro::VO::VOEvent( XML => $scalar );
+  $group_params = $object->group_params();
+
+=cut
+
+sub params {
+  my $self = shift;
+  my $param = "";
+  my $params = "";
+
+  # Get each reference contained  in //VOEvent/What
+  while ( my ($key, $value) = each ( %{$self->{DOCUMENT}->{What}})) {
+
+    # Test reference for hash of  //VOEvent/What/Group
+    if ( ref($value) eq "HASH" && $key eq "Group" ) {
+
+          if ($value->{Param} eq "") {
+              while ( my ($key2, $value2) = each ( %{$value})) { 
+                while ( my ($key3, $value3) = each ( %{$value2->{Param}} ) ) {
+                  $param = param_vals($key3, $value3);
+                  if ($param ne "") {
+                    $params = $params . $param . ", ";
+                  }
+                }
+              }
+          } else {
+               while ( my ($key2, $value2) = each ( %{$value->{Param}} ) ) {
+                 while ( my ($key3, $value3) = each ( %{$value2->{Param}} ) ) {
+                   $param = param_vals($key3, $value3);
+                   if ($param ne "") {
+                     $params = $params . $param . ", ";
+                  }
+                }
+              }
+
+          }
+    }
+
+    # Test reference for hash of  //VOEvent/What/Param
+    if ( ref($value) eq "HASH" && $key eq "Param" ) {
+      if ($value->{'value'} ne "") {
+        $param = construct_param($value->{'name'}, $value->{'value'}, $value->{'unit'}, $value->{'units'});
+        if ($param ne "") {
+          $params = $params . $param . ", ";
+        }
+      }
+      else {
+    
+        # Get comma-separated param key / value pairs below What
+        while ( my ($key2, $value2) = each ( %{$value})) {
+            $param = param_vals($key2, $value2);
+            if ($param ne "") {
+              $params = $params . $param . ", ";
+            }
+        }
+      }  
+    }
+
+    # Test reference for array of  //VOEvent/What/Group
+    if ( ref($value) eq "ARRAY" && $key eq "Group" ) {
+      foreach (@{$value}) {
+        while ( my ($key2, $value2) = each ( %{$_->{Param}})) {
+            $param = param_vals($key2, $value2);
+            if ($param ne "") {
+              $params = $params . $param . ", ";
+            }
+        }  
+      } 
+    }
+  }
+
+  return $params;
+}
+
+=item B{params_vals}
+
+Return the <Group><Param></Group>'s name, value and unit from the <What> tag,
+
+  $object = new Astro::VO::VOEvent( XML => $scalar );
+  $param = param_vals(key, value);
+
+=cut
+
+#sub param_vals($my($key2, my $value2)) {
+sub param_vals {
+
+  my($key2, $value2) = @_;
+
+  my $param_key = "";
+  my $param_value = "";
+  my $param_unit = "";
+  my $param_units = "";
+  my $param = "";
+
+  $param_key = $key2;
+  $param_value = $value2->{'value'};
+  $param_unit = $param_unit = "$value2->{'unit'}";
+  $param_units = $param_unit = "$value2->{'units'}";
+
+  $param = construct_param($param_key, $param_value, $param_unit, $param_units);
+}
+
+#su param_vals {
+sub construct_param {
+
+  my $param = ""; 
+  my($param_key, $param_value, $param_unit, $param_units) = @_;
+
+      # Check for param values that should be reference files
+      if ((substr $param_value, 0, 6) eq "ftp://") {
+        $references = $references . "$param_key=$param_value" . ", ";
+      }
+      elsif ((substr $param_value, 0, 7) eq "http://") {
+        $references = $references . "$param_key=$param_value" . ", ";
+      }
+      else {
+
+        # Get the parameter's name from $key2 and its value from $value2->'value'
+        $param = "$param_key=$param_value";
+
+        # Get the parameter's unit from $value2->'unit'...
+        if ($param_unit ne "") {
+          $param = $param .  " " . $param_unit; 
+        }
+
+        #...unless the parameter's unit is in $value2->'units'...
+        elsif ($param_unit eq "") {
+          if ($param_units ne "") {
+            $param = $param .  " " . $param_units; 
+          }
+
+          # ...unless the parameter has no unit.
+          elsif ($param_units eq "") {
+            $param = $param; 
+          }
+        }
+      }
+  return $param;
+}
+
+
 
 # C O N F I G U R E ---------------------------------------------------------
 
